contrib/python/intbitset/intbitset.h

typedef int Py_ssize_t;
PyObject* PyString_FromStringAndSize(const char *v, Py_ssize_t len);
typedef unsigned long long int word_t;
typedef unsigned char bool_t;
extern const int wordbytesize;
extern const int wordbitsize;
extern const int maxelem;
typedef struct {
    int size;
    int allocated;
    word_t trailing_bits;
    int tot;
    word_t *bitset;
} IntBitSet;
IntBitSet *intBitSetCreate(register const int size, const bool_t trailing_bits);
IntBitSet *intBitSetCreateFromBuffer(const void * const buf, const Py_ssize_t bufsize);
IntBitSet *intBitSetResetFromBuffer(IntBitSet *const bitset, const void *const buf, const Py_ssize_t bufsize);
IntBitSet *intBitSetReset(IntBitSet *const bitset);
void intBitSetDestroy(IntBitSet *const bitset);
IntBitSet *intBitSetClone(const IntBitSet * const bitset);
int intBitSetGetSize(IntBitSet * const bitset);
int intBitSetGetAllocated(const IntBitSet * const bitset);
int intBitSetGetTot(IntBitSet * const bitset);
bool_t intBitSetIsInElem(const IntBitSet * const bitset, register const unsigned int elem);
void intBitSetAddElem(IntBitSet *const bitset, register const unsigned int elem);
void intBitSetDelElem(IntBitSet *const bitset, register const unsigned int elem);
bool_t intBitSetEmpty(const IntBitSet * const bitset);
IntBitSet *intBitSetUnion(IntBitSet *const x, IntBitSet *const y);
IntBitSet *intBitSetXor(IntBitSet *const x, IntBitSet *const y);
IntBitSet *intBitSetIntersection(IntBitSet *const x, IntBitSet *const y);
IntBitSet *intBitSetSub(IntBitSet *const x, IntBitSet *const y);
IntBitSet *intBitSetIUnion(IntBitSet *const dst, IntBitSet *const src);
IntBitSet *intBitSetIXor(IntBitSet *const dst, IntBitSet *const src);
IntBitSet *intBitSetIIntersection(IntBitSet *const dst, IntBitSet *const src);
IntBitSet *intBitSetISub(IntBitSet *const x, IntBitSet *const y);
bool_t intBitSetIsDisjoint(const IntBitSet * const x, const IntBitSet * const y);
int intBitSetGetNext(const IntBitSet *const x, register int last);
int intBitSetGetLast(const IntBitSet *const x);
/** Compare.
 * Compare two intbitset.
 * Returns 0 if the two bitset are equals.
 * Returns 1 if x is proper subset of y
 * Returns 2 if y is proper subset of x
 * Returns 3 if x != y
 */
unsigned char intBitSetCmp(IntBitSet *const x, IntBitSet *const y);